k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: default
spec:
  replicas: 1
  selector:
      matchLabels:
        app: api
  template:
      metadata:
        labels:
            app: api
      spec:
        serviceAccountName: api
        containers:
            - name: api
              image: us-central1-docker.pkg.dev/rad-containers-hmed/platform/api:latest
              imagePullPolicy: Always
              resources:
                requests:
                  memory: "1Gi"
                  cpu: "500m"
                # limits:
                #   memory: "512Mi"
                #   cpu: "500m"
              ports:
              - name: http
                containerPort: 8000
