k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  annotations:
    # cloud.google.com/neg: '{"ingress": true, "exposed_ports": {"8000":{}}}'
    cloud.google.com/backend-config: '{"default": "api"}'
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
