k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.global-static-ip-name: api-1
    networking.gke.io/v1beta1.FrontendConfig: my-frontend-config
    networking.gke.io/managed-certificates: "api-managed-cert"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    # ingress.gcp.kubernetes.io/pre-shared-cert: "api-compute-cert"
    # ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  # this has to be commented out until the DNS is established, then the cert is made, then we can use tls.
  tls:
    - hosts:
        - ada.dev.r7ai.net
  # do not specify this with a managed secret
  # secretName: api-managed-cert
  defaultBackend:
    service:
      name: api
      port:
        number: 8000
  # rules:
  # - host: ai-api.dev.r7ai.net
  #   http:
  #     paths:
  #     - path: /*
  #       pathType: ImplementationSpecific
  #       backend:
  #         service:
  #           name: api
  #           port:
  #             number: 8000
